# K-Balabolka

./: .clang-format  .editorconfig  .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-macos.yml  ci.yml
gui/: AnnoySpeaker.spec  K-Balabolka.spec  main.py  requirements.txt  textproc.py  voices.py
plugin/: gstmacttssink.c  gstmacttssink_macos.h  gstmacttssink_macos.m  gstttssink.c  meson.build
scripts/: check-spdx-headers.py  setup-dev.sh
tests/: README.md  conftest.py  test_catalog.py  test_plugin_cli.py  test_textproc.py  test_voices.py
tests/data/: memil_excerpt.txt
tools/kb-tts-export/: Makefile  kb-tts-export.m
